--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Tea Cozy</title>
-        <link href="/css/style.css" rel="stylesheet" type="text/css" />
+        <link href="./css/style.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
         <header>
             <nav>
-                <img src="/resources/images/img-tea-cozy-logo.webp" alt="tea cozy logo" />
+                <img src="./resources/images/img-tea-cozy-logo.webp" alt="tea cozy logo" />
                 <a href="#location_heading">locations</a>
                 <a href="#featured_tea">featured tea</a>
                 <a href="#mission">mission</a>
